--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -1,18 +1,12 @@
 [global_config]
   window_state = maximise
-  borderless = True
 [keybindings]
+  close_window = <Alt>q
 [profiles]
   [[default]]
-    background_color = "#2596be"
-    background_darkness = 0.85
-    background_type = transparent
+    background_color = "#2596be
     cursor_shape = ibeam
-    cursor_fg_color = "#2596be"
-    cursor_bg_color = "#ffffff"
-    font = Monospace 12
-    foreground_color = "#FFFFFF"
-    palette = "#2596be:#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2"
+    font = JetBrainsMono Nerd Font Mono 10
     use_system_font = False
 [layouts]
   [[default]]
@@ -22,4 +16,5 @@
     [[[child1]]]
       type = Terminal
       parent = window0
+      profile = default
 [plugins]
