--- a/codium/.var/app/com.vscodium.codium/config/VSCodium/User/settings.json
+++ b/codium/.var/app/com.vscodium.codium/config/VSCodium/User/settings.json
@@ -268,7 +268,7 @@
     },
     "workbench.layoutControl.enabled": false,
     "window.autoDetectColorScheme": true,
-    "workbench.preferredDarkColorTheme": "poimandres",
+    "workbench.preferredDarkColorTheme": "Min Dark",
     "workbench.preferredLightColorTheme": "Min Light",
     "gitlens.advanced.messages": {
       "suppressIntegrationRequestTimedOutWarning": true
