feat: [vscodium] add ajustes atalhos

--- a/codium/.var/app/com.vscodium.codium/config/VSCodium/User/_my_docs/backup_User_vscode/_notes_/backup_settings_25_05.json
+++ b/codium/.var/app/com.vscodium.codium/config/VSCodium/User/_my_docs/backup_User_vscode/_notes_/backup_settings_25_05.json
@@ -106,7 +106,7 @@
   // TYPESCRIPT config linguage PARA TODOS TS : [ TS_ISOLADOS, DENO, ]
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features", // CONTROLA FORMATACAO DOS TS
-    "editor.formatOnSave": true
+    "editor.ff
   },
   "typescript.updateImportsOnFileMove.enabled": "always",
   "typescript.suggest.autoImports": true,
